# fastapi_stdenv

./: README.md  pyproject.toml
app/: main.py  product_views.py
app/core/: config.py
app/core/models/: db_helper.py  product.py
app/users/: crud.py  schemas.py  views.py
