[tool.poetry]
name = "fastapi-stdenv"
version = "0.1.0"
description = ""
authors = ["a.dolgov <dolgov_am@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
black = "^24.10.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
